Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,6 +1059,9 @@
    },
    "outputs": [],
    "source": [
+    "for \n",
+    "\n",
+    "\n",
     "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
