Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,8 @@
    },
    "outputs": [],
    "source": [
-    "for names_and_ranks in \n",
+    "for names_and_ranks in city_names:\n",
+    "    \n",
     "\n",
     "\n",
     "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
