--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1059,7 +1059,7 @@
    },
    "outputs": [],
    "source": [
-    "for index in city_names:\n",
+    "for names_and_rank in city_names:\n",
     "    \n",
     "\n",
     "\n",
