Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,8 @@
    },
    "outputs": [],
    "source": [
-    "for index in city_names:\n",
+    "for index in list(city_names):\n",
+    "    \n",
     "    \n",
     "    \n",
     "\n",
