Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
    "outputs": [],
    "source": [
     "for index in list(city_names):\n",
-    "    print([index]+city_names[index])\n",
+    "    print([index]+'city_names[index])\n",
     "    \n",
     "    \n",
     "\n",
