Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1070,7 +1070,7 @@
    ],
    "source": [
     "for index in list(city_names):\n",
-    "    print([city+'.', city_names[index])\n",
+    "    print([city_indices[index]+'.', city_names[index])\n",
     "    \n",
     "    \n",
     "\n",
