--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
    ],
    "source": [
     "for index in list(city_names):\n",
-    "    print([city_indices[index] + '.', city_names[index])\n",
+    "    print(city_indices[index] + '.', city_names[index])\n",
     "    \n",
     "    \n",
     "\n",
