--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,7 +1069,7 @@
     }
    ],
    "source": [
-    "for index in list('city_names'):\n",
+    "for index in list(city_names):\n",
     "    print(city_indices[index]+'.', city_names[index])\n",
     "    \n",
     "    \n",
