Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,7 +1069,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
+    "names_and_ranks = ['change this to different el] # make sure the list is empty"
    ]
   },
   {
