--- a/index.ipynb
+++ b/index.ipynb
@@ -1186,8 +1186,7 @@
    "source": [
     "trace_populations = {'x': names_and_ranks, \n",
     "                     'y': city_populations, \n",
-    "                     'type': 'bar', \n",
-    "                     'name': 'populations'}"
+    "                     'type': 'bar'}"
    ]
   },
   {
